--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,53 +1,21 @@
 [data-tts-block-id].tts-active {
     background : rgb(206, 225, 255, 0.9) !important ;
 }
+
 [data-tts-sentence-id].tts-active {
     background : rgb(0, 89, 191, 0.7) !important ;
 }
+
 .shadows-into-light-regular {
-font-family : "Shadows Into Light", cursive;
-font-weight : 400;
-font-style : normal;
+    font-family : "Shadows Into Light", cursive;
+    font-weight : 400;
+    font-style : normal;
 }
 
 * {
-    margin : 0;
+margin : 0;
     padding : 0;
     box-sizing : border-box;
-}
-
-:root {
-    --primary-color: #dadccc;
-    --secondary-color: #385c5d;
-    --accent1-color: #c37c50;
-    --accent2-color: #6ca38e;
-
-    --white: #f3eded;
-    --black: #000;
-    --button-color: #hsl(36, 89%, 47%);
-    --button-color-hover: #hsl(36, 89%, 57%);
-
-    --nav-background-color: var(--accent2-color);
-    --nav-link-color: #fff;
-    --nav-hover-link-color:var(--accent2-color);
-    --nav-hover-background-color: #fff;
-
-    --heading-font: "Shadows Into Light", 'static';
-    --paragraph-font: "Roboto Slab", 'san-serif';
-}
-
-body {
-    font-family: var(--paragraph-font);
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-family: var(--heading-font);
-    color: var(--secondary-color);
 }
 
 *, *:before, *:after {
@@ -105,7 +73,6 @@ header {
 
 nav {
     display : flex;
-    font-family: var(--heading-font);
     text-decoration : none;
     justify-content : space-around;
 }
@@ -114,10 +81,9 @@ nav a {
     display : flex;
     padding : 0.5rem;
     margin : -0.14rem;
-    font-family: var(--heading-font);
     color : #dadada;
     text-decoration : none;
-    font-size: x-large;
+    font-size : x-large;
 }
 
 nav a:hover {
@@ -166,15 +132,13 @@ footer p {
     position : relative;
 }
 
-.hero>img {
+.hero > img {
     display : block;
     width : 100%;
 }
 
 .button-box {
-    background-color: var(--button-color);
     font-size : 1.25rem;
-    color: var(--white);
     border-radius : 20px;
     padding : 1em;
     justify-self : center;
@@ -182,14 +146,7 @@ footer p {
     min-width : 10rem;
     text-align : center;
     letter-spacing : 1px;
-    box-shadow: 3px 3px 3px var(--primary-color);
 }
-
-.button-box:hover {
-    background-color: var(--button-color-hover);
-}
-
-/* Homepage */
 
 .hero-msg {
     justify-content : center;
@@ -197,19 +154,17 @@ footer p {
 
 .home-title {
     margin : 50px 0 20px 0;
-    color: var(--white);
     justify-self : center;
 }
 
 .home-subtitle {
     margin : 20px 0;
-    color: var(--white);
     justify-self : center;
 }
 
 .newsletter {
-    grid-column : 4/9;
-    grid-row : 9/11;
+    grid-column : 4 / 9;
+    grid-row : 9 / 11;
     justify-self : center;
     justify-items : center;
     display : flex;
@@ -220,8 +175,6 @@ footer p {
 .newsletter-form {
     display : flex;
     flex-direction : column;
-    background-color: var(--accent1-color);
-    color: var(--white);
     margin : 1em 0;
     padding : 1em 0;
 }
@@ -229,7 +182,6 @@ footer p {
 .newsletter p {
     justify-self : center;
     font-size : 1.5em;
-    color: var(--black);
     margin : 1em 0 0 0;
 }
 
@@ -245,7 +197,6 @@ footer p {
     grid-column : 1;
     grid-row : 1;
     text-align : right;
-    color: var(--white);
     margin : 0;
 }
 
@@ -255,12 +206,7 @@ footer p {
 }
 
 .newsletter-form button {
-    background-color: var(--button-color);
     padding : 0.5em 1em;
-}
-
-.newsletter-form .button-box:hover {
-    background-color: var(--button-color-hover);
 }
 
 .card {
@@ -277,17 +223,17 @@ footer p {
 }
 
 .camping-card {
-    grid-column : 6/8;
+    grid-column : 6 / 8;
     grid-row : 2;
 }
 
 .rivers-card {
-    grid-column : 10/12;
+    grid-column : 10 / 12;
     grid-row : 2;
 }
 
 .card-img {
-    border : 10px solid #fff;
+    border : #fff solid 10px;
     width : 100%;
     transition : transform 0.5s;
     box-shadow : 5px 5px 10px #385c5d;
@@ -303,22 +249,19 @@ footer p {
 }
 
 .background {
-    background-color: var(--secondary-color);
     height : 700px;
-    grid-column : 1/13;
-    grid-row : 3/9;
+    grid-column : 1 / 13;
+    grid-row : 3 / 9;
 }
 
 .mountains {
-    grid-column : 2/8;
-    grid-row : 3/9;
+    grid-column : 2 / 8;
+    grid-row : 3 / 9;
 }
 
 .msg {
-    grid-column : 7/12;
-    grid-row : 5/7;
-    color: var(--white);
-    background-color: var(--white);
+    grid-column : 7 / 12;
+    grid-row : 5 / 7;
     padding : 35px;
     box-shadow : 5px 5px 10px #6ca38e;
     line-height : 1.5em;
@@ -330,9 +273,7 @@ footer p {
     line-height : 1em;
 }
 
-/* Modal */
-
-.modal-window>div {
+.modal-window > div {
     border-radius : 1rem;
 }
 
@@ -358,12 +299,12 @@ footer p {
     opacity : 1;
 }
 
-.modal-window>div {
+.modal-window > div {
     width : 800px;
     position : absolute;
     top : 50%;
     left : 50%;
-    transform : translate(-50%, -50%);
+    transform : translate(-50%,-50%);
     padding : 2em;
     background : white;
 }
@@ -373,7 +314,6 @@ footer p {
 }
 
 .modal-close {
-    color: var(--primary-color);
     line-height : 50px;
     font-size : 80%;
     position : absolute;
@@ -387,8 +327,6 @@ footer p {
 .modal-close:hover {
     color : black;
 }
-
-/* About Us */
 
 .abs-heading1 {
     position : absolute;
@@ -420,9 +358,6 @@ footer p {
     text-align : center;
 }
 
-
-
-
 .history-section {
     margin : 50px 0;
     display : grid;
@@ -438,7 +373,7 @@ footer p {
 }
 
 .history-section p:first-of-type {
-    grid-column : 1/2;
+    grid-column : 1 / 2;
     grid-row : 2;
     padding : 0 20px;
 }
@@ -449,7 +384,7 @@ footer p {
     padding : 0 20px;
 }
 
-.history-section>h2 {
+.history-section > h2 {
     grid-column : 1 / -1;
     grid-row : 1;
     text-align : center;
@@ -459,26 +394,23 @@ footer p {
 .adventures {
     margin : 50px 0;
     display : grid;
-    grid-template-columns : repeat(5, 1fr);
+    grid-template-columns : repeat(5,1fr);
     gap : 1rem;
     justify-items : center;
 }
 
 .history h2, .adventures h2 {
-    grid-column : 1/-1;
+    grid-column : 1 / -1;
     justify-self : center;
     padding : 1em 0;
 }
 
 figure:nth-of-type(odd) {
-    background-color: var(--secondary-color);
-    color: var(--nav-link-color);
     align-self : center;
 }
 
 figure:nth-of-type(even) {
-    background-color: #3f3f3f;
-    color: var(--nav-link-color);
+    background-color : #3f3f3f;
     align-self : center;
 }
 
@@ -494,16 +426,14 @@ figcaption {
     margin : 50px 0;
 }
 
-/* Contact Us */
-
 .contactus {
     margin : 50px auto;
     gap : 30px 10px;
 }
 
 .con-hero {
-    grid-column : 1/-1;
-    grid-row : 1/3;
+    grid-column : 1 / -1;
+    grid-row : 1 / 3;
     z-index : -1;
 }
 
@@ -513,7 +443,7 @@ figcaption {
     grid-column : 1 / 6;
     grid-row : 1 / 3;
     margin : 0 1em;
-    background-color : rgba(59, 148, 175, 0.304);
+    background-color : rgb(59, 148, 175, 0.304);
 }
 
 .contact-fields {
@@ -524,7 +454,7 @@ figcaption {
 
 input, label, textarea, select {
     font-size : 18px;
-    padding: 10px;
+    padding : 10px;
 }
 
 label {
@@ -540,7 +470,7 @@ label {
 }
 
 input:focus, textarea:focus, select:focus {
-    border : 1px solid #151313;
+    border : #151313 solid 1px;
     background-color : #d7efde;
     color : #3f3f3f;
 }
@@ -550,7 +480,7 @@ input:focus, textarea:focus, select:focus {
     margin : 1em;
     background-color : #040466;
     color : #f3f3f3;
-    border : 1px solid #3e3e3e;
+    border : #3e3e3e solid 1px;
     box-shadow : 5px 3px 3px #000;
     border-radius : 25px;
     font-size : 20px;
@@ -559,8 +489,8 @@ input:focus, textarea:focus, select:focus {
 }
 
 .address {
-    grid-column : 7/13;
-    grid-row : 1/3;
+    grid-column : 7 / 13;
+    grid-row : 1 / 3;
     display : grid;
     grid-template-rows : 1fr 2fr;
 }
@@ -583,7 +513,7 @@ input:focus, textarea:focus, select:focus {
 }
 
 .employees {
-    grid-column : 1/-1;
+    grid-column : 1 / -1;
 }
 
 .employee {
@@ -591,26 +521,21 @@ input:focus, textarea:focus, select:focus {
 }
 
 .employee:nth-of-type(1) {
-    grid-column : 2/4;
+    grid-column : 2 / 4;
 }
 
 .employee:nth-of-type(2) {
-    grid-column : 6/8;
+    grid-column : 6 / 8;
 }
 
 .employee:nth-of-type(3) {
-    grid-column : 10/12;
+    grid-column : 10 / 12;
 }
 
 .hrule {
-    border: 10px solid rgba(4, 17, 252, 0.644);
-    grid-column : 1/-1;
+    border : rgb(4, 17, 252, 0.644) solid 10px;
+    grid-column : 1 / -1;
 }
-
-
-
-/* Trips */
-
 
 .trips-grid {
     display : grid;
@@ -620,17 +545,15 @@ input:focus, textarea:focus, select:focus {
 }
 
 .trips-table {
-    grid-column : 1/-1;
-    grid-row : 2/4;
+    grid-column : 1 / -1;
+    grid-row : 2 / 4;
 }
 
 .trips-table h2 {
-    grid-column : 1/-1;
+    grid-column : 1 / -1;
     grid-row : 1;
     justify-self : center;
 }
-
-
 
 .trip-duration {
     grid-column : 1;
@@ -644,15 +567,11 @@ input:focus, textarea:focus, select:focus {
     grid-column : 3;
 }
 
-.trip-cost:nth-of-type(even),
-.trip-cost:nth-of-type(odd),
-.trip-name:nth-of-type(odd) {
+.trip-cost:nth-of-type(even), .trip-cost:nth-of-type(odd), .trip-name:nth-of-type(odd) {
     background-color : #9f9f9f;
 }
 
-.trip-cost:nth-of-type(odd),
-.trip-duration:nth-of-type(even),
-.trip-name:nth-of-type(even) {
+.trip-cost:nth-of-type(odd), .trip-duration:nth-of-type(even), .trip-name:nth-of-type(even) {
     background-color : #a28bf7;
 }
 
@@ -667,45 +586,39 @@ input:focus, textarea:focus, select:focus {
     gap : 50px;
 }
 
-
-
-/* Grid Layout */
-
-
 .cols12 {
-    grid-column : 1/13;
+    grid-column : 1 / 13;
 }
 
 .cols2-6 {
-    grid-column : 2/6;
+    grid-column : 2 / 6;
 }
 
 .cols8-12 {
-    grid-column : 8/12;
+    grid-column : 8 / 12;
 }
 
 .cols9-12 {
-    grid-column : 9/12;
+    grid-column : 9 / 12;
 }
 
 .cols4-9 {
-    grid-column : 4/9;
+    grid-column : 4 / 9;
 }
-
 .cols4-10 {
-    grid-column : 4/10;
+    grid-column : 4 / 10;
 }
 
 .rows2 {
-    grid-row : 1/3;
+    grid-row : 1 / 3;
 }
 
 .rows4 {
-    grid-row : 1/5;
+    grid-row : 1 / 5;
 }
 
 .rows8 {
-    grid-row : 1/9;
+    grid-row : 1 / 9;
 }
 
 .row2 {
