--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -29,8 +29,8 @@
     --nav-hover-link-color:var(--accent2-color);
     --nav-hover-background-color: #fff;
 
-    --heading-font: "Permanent Marker", 'cursive';
-    --paragraph-font: 'Roboto', 'san-serif';
+    --heading-font: "Roboto Slab", 'san-serif';
+    --paragraph-font: "Shadows Into Light", 'static';
 }
 
 body {
