--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -12,6 +12,26 @@
     font-style : normal;
 }
 
+:root {
+    --primary-color: #dadccc;
+    --secondary-color: #385c5d;
+    --accent1-color: #c37c50;
+    --accent2-color: #6ca38e;
+
+    --white: #f3eded;
+    --black: #000;
+    --button-color: #hsl(36, 89%, 47%);
+    --button-color-hover: #hsl(36, 89%, 57%);
+
+    --nav-background-color: var(--accent2-color);
+    --nav-link-color: #fff;
+    --nav-hover-link-color:var(--accent2-color);
+    --nav-hover-background-color: #fff;
+
+    --heading-font: "Roboto Slab", 'san-serif';
+    --paragraph-font: "Shadows Into Light", 'static';
+}
+
 * {
 margin : 0;
     padding : 0;
