--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -1,112 +1,172 @@
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 [data-tts-block-id].tts-active {
     background : rgb(206, 225, 255, 0.9) !important ;
-    }
-    [data-tts-sentence-id].tts-active {
+}
+[data-tts-sentence-id].tts-active {
     background : rgb(0, 89, 191, 0.7) !important ;
-    }
-    * {
+}
+
+* {
     margin : 0;
     padding : 0;
     box-sizing : border-box;
-    }
-    *, *:before, *:after {
+}
+
+:root {
+    --primary-color: #dadccc;
+    --secondary-color: #385c5d;
+    --accent1-color: #c37c50;
+    --accent2-color: #6ca38e;
+
+    --white: #f3eded;
+    --black: #000;
+    --button-color: #hsl(36, 89%, 47%);
+    --button-color-hover: #hsl(36, 89%, 57%);
+
+    --nav-background-color: var(--accent2-color);
+    --nav-link-color: #fff;
+    --nav-hover-link-color:var(--accent2-color);
+    --nav-hover-background-color: #fff;
+
+    --heading-font: "Roboto Slab", 'san-serif';
+    --paragraph-font: "Shadows Into Light", 'static';
+}
+
+body {
+    font-family: var(--paragraph-font);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: var(--heading-font);
+    color: var(--secondary-color);
+}
+
+*, *:before, *:after {
     box-sizing : border-box;
-    }
-    h1 {
+}
+
+h1 {
     font-size : 3rem;
-    }
-    h2 {
+}
+
+h2 {
     font-size : 2.5rem;
-    }
-    h3 {
+}
+
+h3 {
     font-size : 2rem;
-    }
-    h4 {
+}
+
+h4 {
     font-size : 1.5rem;
-    }
-    h5 {
+}
+
+h5 {
     font-size : 1.25rem;
-    }
-    h6 {
+}
+
+h6 {
     font-size : 1rem;
-    }
-    nav {
+}
+
+nav {
     display : flex;
     text-decoration : none;
     justify-content : space-around;
-    }
-    nav a {
+}
+
+nav a {
     display : flex;
     padding : 0.5rem;
     margin : -0.14rem;
     color : #dadada;
     text-decoration : none;
     font-size : x-large;
-    }
-    nav a:hover {
+}
+
+nav a:hover {
     background-color : #fff;
     color : #c37c50;
-    }
-    footer {
+}
+
+footer {
     display : flex;
     justify-content : space-between;
     align-items : center;
     padding : 1rem;
     background-color : #3f3f3f;
     margin-top : 100px;
-    }
-    footer p {
+}
+
+footer p {
     color : #dadada;
-    }
-    .footer-menu {
+}
+
+.footer-menu {
     color : #dadada;
     text-decoration : none;
-    }
-    header, main, footer {
+}
+
+header, main, footer {
     max-width : 1280px;
     margin : auto;
-    }
-    header {
+}
+
+header {
     display : grid;
     grid-template-columns : 200px auto;
     align-items : center;
     background-color : #3f3f3f;
-    text-align : center;
-    }
-    p {
-    padding : 25px;
-    }
-    nav {
+    text-align: center;
+}
+
+p {
+padding : 25px;
+}
+
+nav {
     display : flex;
+    font-family: var(--heading-font);
     text-decoration : none;
     justify-content : space-around;
-    }
-    nav a {
+}
+
+nav a {
     display : flex;
     padding : 0.5rem;
     margin : -0.14rem;
+    font-family: var(--heading-font);
     color : #dadada;
     text-decoration : none;
-    font-size : x-large;
-    background-color : #3f3f3f;
-    }
-    nav a:hover {
+    font-size: x-large;
+    background-color: #3f3f3f;
+}
+
+nav a:hover {
     background-color : #fff;
     color : #c37c50;
-    }
-    footer {
+}
+
+footer {
     display : flex;
     justify-content : space-between;
     align-items : center;
     padding : 1rem;
     background-color : #3f3f3f;
     margin-top : 100px;
-    }
-    footer p {
-    color : #dadada;
-    }
+}
 
-    .footer-menu {
+footer p {
+    color : #dadada;
+}
+
+.footer-menu {
     color : #dadada;
     text-decoration : none;
 }
