--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&family=Shadows+Into+Light&display=swap');
 
 [data-tts-block-id].tts-active {
     background : rgb(206, 225, 255, 0.9) !important ;
@@ -29,8 +29,8 @@
     --nav-hover-link-color:var(--accent2-color);
     --nav-hover-background-color: #fff;
 
-    --heading-font: "Roboto Slab", 'san-serif';
-    --paragraph-font: "Shadows Into Light", 'static';
+    --heading-font: "Shadows Into Light", 'static';
+    --paragraph-font: "Roboto Slab", 'san-serif';
 }
 
 body {
