--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -123,7 +123,7 @@ header {
     grid-template-columns : 200px auto;
     align-items : center;
     background-color : #3f3f3f;
-    text-align: center;
+    font-family: var(--heading-font);
 }
 
 p {
