--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -1,10 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&family=Shadows+Into+Light&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&family=Shadows+Into+Light&display=swap') ;
 
 [data-tts-block-id].tts-active {
     background : rgb(206, 225, 255, 0.9) !important ;
 }
 [data-tts-sentence-id].tts-active {
     background : rgb(0, 89, 191, 0.7) !important ;
+}
+
+.coolors-palette-widget .coolors-palette-widget_colors div span, .coolors-palette-widget .coolors-palette-widget_info_link, .coolors-palette-widget .coolors-palette-widget_info_name {
+    all : initial;
+    font-family : Coolors-Inter, sans-serif;
 }
 
 * {
