--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -22,8 +22,8 @@
 
     --white: #f3eded;
     --black: #000;
-    --button-color: #hsl(36, 89%, 47%);
-    --button-color-hover: #hsl(36, 89%, 57%);
+    --button-color: hsl(36, 89%, 47%);
+    --button-color-hover: hsl(36, 89%, 57%);
 
     --nav-background-color: var(--accent2-color);
     --nav-link-color: #fff;
