--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -474,6 +474,9 @@ figcaption {
     grid-row : 1 / 3;
     margin : 0 1em;
     background-color : rgb(59, 148, 175, 0.304);
+    padding: 20px;
+    border-radius: 10px;
+    border: 2px solid #3b94af;
 }
 
 .contact-fields {
@@ -523,23 +526,25 @@ input:focus, textarea:focus, select:focus {
     grid-row : 1 / 3;
     display : grid;
     grid-template-rows : 1fr 2fr;
+    background-color: rgb(59, 148, 175, 0.304);
+    padding: 20px;
+    border-radius: 10px;
 }
 
-.add-phone {
-    grid-row : 1;
+.add-phone,
+.gmap {
+    padding: 10px;
 }
 
 .add-phone a, .add-phone address {
     color : #fff;
     font-size : 24px;
     font-weight : 500;
-    display : block;
-    padding : 0.5em;
+    margin-bottom: 10px;
 }
 
 .gmap {
     border : none;
-    grid-row : 2;
 }
 
 .employees {
