--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -23,26 +23,17 @@
     --paragraph-font : "Roboto Slab",'san-serif';
 }
 
-h1, h2, h3, h4, h5, h6 {
-    color : var(--secondary-color);
-}
-
 body {
     font-family: var(--paragraph-font);
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
     font-family: var(--heading-font);
     color: var(--secondary-color);
 }
 
 * {
-margin : 0;
+    margin : 0;
     padding : 0;
     box-sizing : border-box;
 }
@@ -51,29 +42,13 @@ margin : 0;
     box-sizing : border-box;
 }
 
-h1 {
-    font-size : 3rem;
-}
-
-h2 {
-    font-size : 2.5rem;
-}
-
-h3 {
-    font-size : 2rem;
-}
-
-h4 {
-    font-size : 1.5rem;
-}
-
-h5 {
-    font-size : 1.25rem;
-}
-
-h6 {
-    font-size : 1rem;
-}
+/* Typography */
+h1 { font-size : 3rem;}
+h2 { font-size : 2.5rem;}
+h3 { font-size : 2rem;}
+h4 { font-size : 1.5rem;}
+h5 { font-size : 1.25rem;}
+h6 { font-size : 1rem;}
 
 p {
     padding : 10px;
@@ -84,9 +59,7 @@ img {
     width : 100%;
 }
 
-a {
-    text-decoration : none;
-}
+a { text-decoration : none;}
 
 header, main, footer {
     max-width : 1280px;
@@ -103,7 +76,6 @@ header {
 
 nav {
     display : flex;
-    text-decoration : none;
     justify-content : space-around;
 }
 
@@ -154,7 +126,7 @@ footer p {
 
 .grid {
     display : grid;
-    grid-template-columns : repeat(12,1fr);
+    grid-template-columns : repeat(12, 1fr);
     align-items : center;
 }
 
@@ -167,15 +139,17 @@ footer p {
     width : 100%;
 }
 
-.button-box {
-    font-size : 1.25rem;
-    border-radius : 20px;
-    padding : 1em;
-    justify-self : center;
-    align-self : center;
-    min-width : 10rem;
-    text-align : center;
-    letter-spacing : 1px;
+.button {
+    padding: 1.5em;
+    margin: 1em;
+    background-color: var(--white);
+    color: #3f3f3f;
+    border: #3e3e3e solid 1px;
+    box-shadow: 5px 3px 3px #000;
+    border-radius: 25px;
+    font-size: 20px;
+    letter-spacing: 2px;
+    font-weight: 900;
 }
 
 .hero-msg {
@@ -559,17 +533,11 @@ input:focus, textarea:focus, select:focus {
     width: 100%;
 }
 
-.employee:nth-of-type(1) {
-    grid-column : 2 / 4;
-}
+.employee:nth-of-type(1) { grid-column : 2 / 4;}
 
-.employee:nth-of-type(2) {
-    grid-column : 6 / 8;
-}
+.employee:nth-of-type(2) {grid-column : 6 / 8;}
 
-.employee:nth-of-type(3) {
-    grid-column : 10 / 12;
-}
+.employee:nth-of-type(3) { grid-column : 10 / 12;}
 
 .hrule {
     border : #3f3f3f solid 10px;
