--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&family=Shadows+Into+Light&display=swap');
+
+[data-tts-block-id].tts-active {
+    background : rgb(206, 225, 255, 0.9) !important ;
+}
+
+[data-tts-sentence-id].tts-active {
+    background : rgb(0, 89, 191, 0.7) !important ;
+}
+
 [data-tts-block-id].tts-active {
     background : rgb(206, 225, 255, 0.9) !important ;
 }
