--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,20 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&family=Shadows+Into+Light&display=swap');
 
-[data-tts-block-id].tts-active {
+[data-tts-block-id].tts-active,
+[data-tts-sentence-id].tts-active {
     background : rgb(206, 225, 255, 0.9) !important ;
 }
 
-[data-tts-sentence-id].tts-active {
-    background : rgb(0, 89, 191, 0.7) !important ;
-}
-
-[data-tts-block-id].tts-active {
-    background : rgb(206, 225, 255, 0.9) !important ;
-}
-
-[data-tts-sentence-id].tts-active {
-    background : rgb(0, 89, 191, 0.7) !important ;
-}
 
 :root {
     --primary-color : #dadccc;
@@ -48,7 +38,9 @@ h1, h2, h3, h4, h5, h6 {
     box-sizing : border-box;
 }
 
-
+*, *:before, *:after {
+    box-sizing : border-box;
+}
 
 /* Typography */
 h1 { font-size : 3rem;}
@@ -58,6 +50,14 @@ h4 { font-size : 1.5rem;}
 h5 { font-size : 1.25rem;}
 h6 { font-size : 1rem;}
 
+p {
+    padding : 10px;
+    color : #000;
+}
+
+img {
+    width : 100%;
+}
 
 a { text-decoration : none;}
 
