--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -5,6 +5,11 @@
     background : rgb(206, 225, 255, 0.9) !important ;
 }
 
+* {
+    margin : 0;
+    padding : 0;
+    box-sizing : border-box;
+}
 
 :root {
     --primary-color : #dadccc;
@@ -32,23 +37,36 @@ h1, h2, h3, h4, h5, h6 {
     color: var(--secondary-color);
 }
 
-* {
-    margin : 0;
-    padding : 0;
-    box-sizing : border-box;
-}
+
 
 *, *:before, *:after {
-    box-sizing : border-box;
+    box-sizing: border-box;
 }
 
 /* Typography */
-h1 { font-size : 3rem;}
-h2 { font-size : 2.5rem;}
-h3 { font-size : 2rem;}
-h4 { font-size : 1.5rem;}
-h5 { font-size : 1.25rem;}
-h6 { font-size : 1rem;}
+h1 { 
+    font-size: 3rem;
+}
+
+h2 { 
+    font-size: 2.5rem;
+}
+
+h3 { 
+    font-size: 2rem;
+}
+
+h4 { 
+    font-size: 1.5rem;
+}
+
+h5 { 
+    font-size: 1.25rem;
+}
+
+h6 { 
+    font-size: 1rem;
+}
 
 p {
     padding : 10px;
@@ -59,7 +77,9 @@ img {
     width : 100%;
 }
 
-a { text-decoration : none;}
+a { 
+    text-decoration : none;
+}
 
 header, main, footer {
     max-width : 1280px;
@@ -76,6 +96,8 @@ header {
 
 nav {
     display : flex;
+    font-family: var(--heading-font);
+    text-decoration: none;
     justify-content : space-around;
 }
 
@@ -83,6 +105,7 @@ nav a {
     display : flex;
     padding : 0.5rem;
     margin : -0.14rem;
+    font-family: var(--heading-font);
     color : #dadada;
     text-decoration : none;
     font-size : x-large;
@@ -134,22 +157,26 @@ footer p {
     position : relative;
 }
 
-.hero > img {
+.hero>img {
     display : block;
     width : 100%;
 }
 
-.button {
-    padding: 1.5em;
-    margin: 1em;
+.button-box {
     background-color: var(--white);
+    font-size: 20px;
     color: #3f3f3f;
+    border-radius: 25px;
+    padding: 1.5em;
     border: #3e3e3e solid 1px;
     box-shadow: 5px 3px 3px #000;
-    border-radius: 25px;
-    font-size: 20px;
+    text-align: center;
     letter-spacing: 2px;
     font-weight: 900;
+}
+
+.button-box:hover {
+    background-color: var(--button-color-hover);
 }
 
 .hero-msg {
@@ -158,11 +185,13 @@ footer p {
 
 .home-title {
     margin : 50px 0 20px 0;
+    color: var(--white);
     justify-self : center;
 }
 
 .home-subtitle {
     margin : 20px 0;
+    color: var(--white);
     justify-self : center;
 }
 
@@ -205,12 +234,16 @@ footer p {
 }
 
 .newsletter-form input {
-    grid-column : 2;
-    grid-row : 1;
+    grid-column: 2;
+    grid-row: 1;
 }
 
 .newsletter-form button {
-    padding : 0.5em 1em;
+    padding: 0.5em 1em;
+}
+
+.newsletter-form button:hover {
+    background-color: var(--button-color-hover);
 }
 
 .card {
@@ -227,13 +260,13 @@ footer p {
 }
 
 .camping-card {
-    grid-column : 6 / 8;
-    grid-row : 2;
+    grid-column: 6 / 8;
+    grid-row: 2;
 }
 
 .rivers-card {
-    grid-column : 10 / 12;
-    grid-row : 2;
+    grid-column: 10 / 12;
+    grid-row: 2;
 }
 
 .card-img {
@@ -277,7 +310,7 @@ footer p {
     line-height : 1em;
 }
 
-.modal-window > div {
+.modal-window>div {
     border-radius : 1rem;
 }
 
@@ -303,14 +336,14 @@ footer p {
     opacity : 1;
 }
 
-.modal-window > div {
-    width : 800px;
-    position : absolute;
-    top : 50%;
-    left : 50%;
-    transform : translate(-50%,-50%);
-    padding : 2em;
-    background : white;
+.modal-window>div {
+    width: 800px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    padding: 2em;
+    background: white;
 }
 
 .modal-window img {
@@ -388,7 +421,7 @@ footer p {
     padding : 0 20px;
 }
 
-.history-section > h2 {
+.history-section>h2 {
     grid-column : 1 / -1;
     grid-row : 1;
     text-align : center;
@@ -398,7 +431,7 @@ footer p {
 .adventures {
     margin : 50px 0;
     display : grid;
-    grid-template-columns : repeat(5,1fr);
+    grid-template-columns : repeat(5, 1fr);
     gap : 1rem;
     justify-items : center;
 }
@@ -431,6 +464,8 @@ figcaption {
     gap : 2em;
     margin : 50px 0;
 }
+
+/* Contact Us */
 
 .contactus {
     margin : 50px auto;
@@ -489,7 +524,7 @@ input:focus, textarea:focus, select:focus {
     margin : 1em;
     background-color : var(--white);
     color : #3f3f3f;
-    border : #3e3e3e solid 1px;
+    border : 1px solid #3e3e3e;
     box-shadow : 5px 3px 3px #000;
     border-radius : 25px;
     font-size : 20px;
@@ -504,8 +539,8 @@ input:focus, textarea:focus, select:focus {
     grid-template-rows : 1fr 2fr;
 }
 
-.add-phone,
-.gmap {
+.add-phone {
+    grid-row: 1;
     padding: 10px;
 }
 
@@ -513,11 +548,17 @@ input:focus, textarea:focus, select:focus {
     color : #fff;
     font-size : 24px;
     font-weight : 500;
-    margin-bottom: 10px;
+    display: block;
+    padding: 0.5em;
 }
 
 .gmap {
-    border : none;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    border: none;
+    z-index: 1;
 }
 
 .employees {
@@ -533,11 +574,17 @@ input:focus, textarea:focus, select:focus {
     width: 100%;
 }
 
-.employee:nth-of-type(1) { grid-column : 2 / 4;}
+.employee:nth-of-type(1) { 
+    grid-column : 2 / 4;
+}
 
-.employee:nth-of-type(2) {grid-column : 6 / 8;}
+.employee:nth-of-type(2) {
+    grid-column : 6 / 8;
+}
 
-.employee:nth-of-type(3) { grid-column : 10 / 12;}
+.employee:nth-of-type(3) { 
+    grid-column : 10 / 12;
+}
 
 .hrule {
     border : #3f3f3f solid 10px;
@@ -577,11 +624,15 @@ input:focus, textarea:focus, select:focus {
     grid-column : 3;
 }
 
-.trip-cost:nth-of-type(even), .trip-cost:nth-of-type(odd), .trip-name:nth-of-type(odd) {
+.trip-cost:nth-of-type(even), 
+.trip-cost:nth-of-type(odd), 
+.trip-name:nth-of-type(odd) {
     background-color : #9f9f9f;
 }
 
-.trip-cost:nth-of-type(odd), .trip-duration:nth-of-type(even), .trip-name:nth-of-type(even) {
+.trip-cost:nth-of-type(odd), 
+.trip-duration:nth-of-type(even), 
+.trip-name:nth-of-type(even) {
     background-color : #a28bf7;
 }
 
@@ -595,6 +646,8 @@ input:focus, textarea:focus, select:focus {
 .trips {
     gap : 50px;
 }
+
+/* Grid Layout */
 
 .cols12 {
     grid-column : 1 / 13;
