--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -468,80 +468,84 @@ figcaption {
 /* Contact Us */
 
 .contactus {
-    margin : 50px auto;
-    gap : 30px 10px;
+    margin: 50px auto;
+    gap: 30px 10px;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    align-items: center;
 }
 
 .con-hero {
-    grid-column : 1 / -1;
-    grid-row : 1 / 3;
-    z-index : -1;
+    grid-column: 1/-1;
+    grid-row: 1/3;
+    z-index: -1;
 }
 
 .contact {
-    display : flex;
-    flex-direction : column;
-    grid-column : 1 / 6;
-    grid-row : 1 / 3;
-    margin : 0 1em;
-    background-color : rgba(1, 36, 46, 0.813);
+    display: flex;
+    flex-direction: column;
+    grid-column: 1 / 6;
+    grid-row: 1 / 3;
+    margin: 0 1em;
+    background-color: rgba(1, 36, 46, 0.813);
     padding: 20px;
     border-radius: 10px;
     border: 2px solid #053442;
 }
 
 .contact-fields {
-    display : flex;
-    flex-direction : column;
-    padding : 20px;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
 }
 
 input, label, textarea, select {
-    font-size : 18px;
-    padding : 10px;
+    font-size: 18px;
+    padding: 10px;
 }
 
 label {
-    margin-top : 20px;
-    margin-bottom : 5px;
-    color : rgb(179, 245, 224);
-    letter-spacing : 0.5px;
+    margin-top: 20px;
+    margin-bottom: 5px;
+    color: rgb(179, 245, 224);
+    letter-spacing: 0.5px;
 }
 
 .signup {
-    margin-top : 20px;
-    margin-bottom : 5px;
+    margin-top: 20px;
+    margin-bottom: 5px;
 }
 
 input:focus, textarea:focus, select:focus {
-    border : #151313 solid 1px;
-    background-color : #d7efde;
-    color : #3f3f3f;
+    border: #151313 solid 1px;
+    background-color: #d7efde;
+    color: #3f3f3f;
 }
 
 .submit {
-    padding : 1.5em;
-    margin : 1em;
-    background-color : var(--white);
-    color : #3f3f3f;
-    border : 1px solid #3e3e3e;
-    box-shadow : 5px 3px 3px #000;
-    border-radius : 25px;
-    font-size : 20px;
-    letter-spacing : 2px;
-    font-weight : 900;
+    padding: 1.5em;
+    margin: 1em;
+    background-color: var(--white);
+    color: #3f3f3f;
+    border: 1px solid #3e3e3e;
+    box-shadow: 5px 3px 3px #000;
+    border-radius: 25px;
+    font-size: 20px;
+    letter-spacing: 2px;
+    font-weight: 900;
 }
 
 .address {
-    grid-column : 7 / 13;
-    grid-row : 1 / 3;
-    display : grid;
-    grid-template-rows : 1fr 2fr;
+    grid-column: 7/-1;
+    grid-row: 1/3;
+    display: grid;
+    grid-template-rows: 1fr 2fr;
 }
+
+
 
 .add-phone {
     grid-row: 1;
-    padding: 10px;
 }
 
 .add-phone a, .add-phone address {
@@ -552,43 +556,37 @@ input:focus, textarea:focus, select:focus {
     padding: 0.5em;
 }
 
-.gmap {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    border: none;
-    z-index: 1;
-}
+
 
 .employees {
-    grid-column : 1 / -1;
+    grid-column: 1 / -1;
 }
 
-.employee {
-    margin : 0;
-    text-align: center;
+.grid {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    align-items: center;
 }
 
-.employee img {
-    width: 100%;
-}
 
 .employee:nth-of-type(1) { 
-    grid-column : 2 / 4;
+    grid-column: 2 / 4;
 }
 
 .employee:nth-of-type(2) {
-    grid-column : 6 / 8;
+    grid-column: 6 / 8;
 }
 
 .employee:nth-of-type(3) { 
-    grid-column : 10 / 12;
+    grid-column: 10 / 12;
 }
 
 .hrule {
-    border : #3f3f3f solid 10px;
-    grid-column : 1 / -1;
+    border: #3f3f3f solid 10px;
+    grid-column: 1/-1;
+    grid-row: 3;
+    display: block;
+    border-width: 1px;
 }
 
 
