--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -592,22 +592,29 @@ input:focus, textarea:focus, select:focus {
 
 /*Trips*/
 
+.trip {
+    display: block;
+    margin-bottom: 10px;
+}
+
+.trip-details {
+    text-align: center;
+}
+
 .trips-grid {
     display : grid;
-    grid-template-columns : auto auto auto;
-    gap : 1em 5px;
+    grid-template-columns : repeat(auto-fit, minmax(200px, 1fr));
+    gap : 20px;
     margin : 50px auto;
 }
 
 .trips-table {
-    grid-column : 1 / -1;
-    grid-row : 2 / 4;
+    width: 100%;
+    margin-top: 50px;
 }
 
 .trips-table h2 {
-    grid-column : 1 / -1;
-    grid-row : 1;
-    justify-self : center;
+    text-align: center;
 }
 
 .trip-duration {
