--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -598,40 +598,80 @@ input:focus, textarea:focus, select:focus {
 }
 
 .trip-details {
+    margin-top: 10px;
     text-align: center;
+}
+
+section {
+    display: block;
+    unicode-bidi: isolate;
 }
 
 .trips-grid {
     display : grid;
-    grid-template-columns : repeat(auto-fit, minmax(200px, 1fr));
-    gap : 20px;
-    margin : 50px auto;
+    grid-template-columns : 1fr;
+    grid-gap : 1px;
+}
+
+.trips-grid h2 {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    text-align: center;
+}
+
+.trips-item {
+    color: var(--secondary-color);
+    font-weight: 600;
+    padding: 10px;
+    font-size: 17px;
+    align-self: center;
+}
+
+.booknow {
+    background-color: var(--nav-hover-link-color);
+    color: var(--primary-color);
+    border-style: double;
+    border-color: var(--accent1-color);
+    width: auto;
+    font-size: .75em;
+}
+
+.booknow:hover {
+    background-color: var(--accent1-color);
+    color: var(--nav-hover-link-color);
+    text-decoration: none;
 }
 
 .trips-table {
-    width: 100%;
-    margin-top: 50px;
+    border: 1px solid var(--accent1-color);
+    font-size: 1em;
+    width: 600px;
+    height: 400px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .trips-table h2 {
     text-align: center;
 }
 
+tfoot {
+    font-size: .9em;
+    background-color: var(--secondary-color);
+    color: var(--nav-link-color);
+}
+
+thead {
+    background-color: var(--secondary-color);
+    color: var(--nav-link-color);
+    font-size: 16px;
+}
+
 .contact-info {
     text-align: center;
 }
 
-.trip-cost:nth-of-type(even), 
-.trip-cost:nth-of-type(odd), 
-.trip-name:nth-of-type(odd) {
-    background-color : #9f9f9f;
-}
-
-.trip-cost:nth-of-type(odd), 
-.trip-duration:nth-of-type(even), 
-.trip-name:nth-of-type(even) {
-    background-color : #a28bf7;
-}
 
 .table-heading {
     text-align : center;
