--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -694,6 +694,29 @@ section {
     margin-right: auto;
 }
 
+tbody {
+    display: table-row-group;
+    vertical-align: middle;
+    unicode-bidi: isolate;
+    border-color: inherit;
+}
+
+table {
+    border: 1px solid var(--accent1-color);
+    font-size: 1em;
+    width: 600px;
+    height: 400px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+table {
+    border-collapse: separate;
+    text-indent: initial;
+    border-spacing: 2px;
+}
+
 .trips-table h2 {
     text-align: center;
 }
