--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -669,21 +669,6 @@ section {
     align-self: center;
 }
 
-.booknow {
-    background-color: var(--nav-hover-link-color);
-    color: var(--primary-color);
-    border-style: double;
-    border-color: var(--accent1-color);
-    width: auto;
-    font-size: .75em;
-}
-
-.booknow:hover {
-    background-color: var(--accent1-color);
-    color: var(--nav-hover-link-color);
-    text-decoration: none;
-}
-
 .trips-table {
     border: 1px solid var(--accent1-color);
     font-size: 1em;
@@ -746,14 +731,28 @@ thead {
 }
 
 .other-adventures {
-    border: 1px solid var(--accent1-color);
-    font-size: 1em;
-    width: 600px;
-    height: 400px;
-    text-align: center;
-    margin: 0 auto;
+    margin-bottom: 50px;
 }
 
 .other-adventures h2 {
     text-align: center;
+}
+
+.book-now {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.book-now button {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: var(--secondary-color);
+    color: var(--white);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.book-now button:hover {
+    background-color: var(--accent1-color);
 }
