--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -155,11 +155,14 @@ footer p {
 
 .hero {
     position : relative;
+    text-align: center;
 }
 
-.hero>img {
+.hero img {
     display : block;
     width : 100%;
+    height: auto;
+    margin-bottom: 20px;
 }
 
 .button-box {
@@ -196,54 +199,29 @@ footer p {
 }
 
 .newsletter {
-    grid-column : 4 / 9;
-    grid-row : 9 / 11;
-    justify-self : center;
-    justify-items : center;
-    display : flex;
-    flex-direction : column;
-    margin : 1em 0;
+    text-align: center;
+    margin-bottom: 40px;
 }
 
-.newsletter-form {
-    display : flex;
-    flex-direction : column;
-    margin : 1em 0;
-    padding : 1em 0;
+.newsletter input,
+.newsletter button {
+    margin: 10px;
+    padding: 10px;
 }
 
-.newsletter p {
-    justify-self : center;
-    font-size : 1.5em;
-    margin : 1em 0 0 0;
+.call-to-action {
+    text-align: center;
+    margin-bottom: 40px;
 }
 
-.newsletter-form .field-grid {
-    display : grid;
-    grid-template-columns : 1fr 2fr;
-    gap : 10px;
-    margin : 1em;
-    align-items : center;
+.grid-layout {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 20px;
 }
 
-.newsletter-form label {
-    grid-column : 1;
-    grid-row : 1;
-    text-align : right;
-    margin : 0;
-}
-
-.newsletter-form input {
-    grid-column: 2;
-    grid-row: 1;
-}
-
-.newsletter-form button {
-    padding: 0.5em 1em;
-}
-
-.newsletter-form button:hover {
-    background-color: var(--button-color-hover);
+.grid-item {
+    text-align: center;
 }
 
 .card {
