--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -224,27 +224,11 @@ footer p {
     text-align: center;
 }
 
-.card {
-    margin : 100px 0;
-    grid-row : 3;
-    display : flex;
-    flex-direction : column;
-    align-items : center;
-}
-
-.rapids-card {
-    grid-column : 2 / 4;
-    grid-row : 2;
-}
-
-.camping-card {
-    grid-column: 6 / 8;
-    grid-row: 2;
-}
-
-.rivers-card {
-    grid-column: 10 / 12;
-    grid-row: 2;
+.card, .rapids-car, .camping-card, .rivers-card {
+    margin: 100px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .card-img {
@@ -314,7 +298,7 @@ footer p {
     opacity : 1;
 }
 
-.modal-window>div {
+.modal-window > div {
     width: 800px;
     position: absolute;
     top: 50%;
@@ -642,7 +626,7 @@ input:focus, textarea:focus, select:focus {
     align-self: center;
 }
 
-.trips-table {
+.trips-table, table {
     border: 1px solid var(--accent1-color);
     font-size: 1em;
     width: 600px;
@@ -659,15 +643,7 @@ tbody {
     border-color: inherit;
 }
 
-table {
-    border: 1px solid var(--accent1-color);
-    font-size: 1em;
-    width: 600px;
-    height: 400px;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-}
+
 
 table {
     border-collapse: separate;
